Fixed RGBSprites, refactored more classes.